rewrote commit history

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 .DS_Store
 .env
 
+# ignore all the input and output data except for publically avaible pdxe dataset.
+input_data/McGill_TNBC
+input_data/TNBC
+
+# all the output data.
+output_data/*
+
 # ignoring the initial csv files for cnv, mutation and rna.
 input_data/*/copy_number_variation.*
 input_data/*/mutation.*
